add on html put section and style header-image

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="">Item 1</a></li>
       </ul>
     </div>
+    <section class="header-image"><img src = "images/movie.jpg"></section>
     <div class="header-title">
       <h1>title of the page</h1>
     </div>
