add new link to menu

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Page title</title>
+    <title>Toy Story world contains the characters ... and Buzz</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -12,20 +12,20 @@
     <div class="header">
       <img src="images\title.png" />
     </div>
-    <div class="menu">
+    <div class="Buzz life">
       <ul>
-        <li><a href="">Item 1</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Buzz_Lightyear">Item 1</a></li>
       </ul>
     </div>
     <section class="header-image"><img src = "images/movie.jpg"></section>
     <div class="header-title">
       <h1>title of the page</h1>
     </div>
-    <div class="wrapper">
-      <div class="box">
+    <div class="Buzz">
+      <div class="box1">
         <a href="">
-          <img src="images\woody.png" width="400" />
-          <p>Card comment</p>
+          <img src="images/buzz.png" />
+          <p>Buzz is the friend of woody</p>
         </a>
       </div>
     </div>
